--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
         <title>AUI Forum</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="script" href="scripts.js">
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="globalstyle.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="content">
-            <div class="posts" id="posts" style="display: none;"> <!--алишер не забудь то что эта штука не для верстки-->
+            <div class="posts" id="posts" > <!--алишер не забудь то что эта штука не для верстки-->
 
                 <div class="posthead">
                     <div class="profile"></div>
